--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Jon Hutchison Portfolio</title>
-    <meta name="description" content="Portfolio of Austin based front end web engineer Jon Hutchison"/>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Jon Hutchison Portfolio</title>
+  <meta name="description" content="Portfolio of Austin based frontend software engineer Jon Hutchison" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
